2015-02-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-mime-widget-image.c
	(balsa_mime_widget_image_dispose): fix typo.

2015-02-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-mime-widget-message.c (add_header_gchar):
	gtk_widget_override_font is deprecated, use CSS instead.

2015-02-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-mime-widget-image.c (balsa_mime_widget_image_dispose),
	(balsa_mime_widget_new_image):
	gtk_style_context_get_background_color and
	gtk_widget_override_background_color are deprecated; when we
	replace the GtkNotebook with a GtkStack, we should get
	consistent backgrounds again.

2015-02-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-message.c (balsa_message_init):
	gtk_style_context_get_background_color and
	gtk_widget_override_background_color are deprecated; when we
	replace the GtkNotebook with a GtkStack, we should get
	consistent backgrounds again.

2015-02-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* libbalsa/source-viewer.c (libbalsa_show_message_source):
	gtk_widget_override_font is deprecated, use CSS instead.

2015-02-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (balsa_window_new): vertically center the
	new skinny progress bar.

2015-02-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Allow for quoted strings in vcal items

	* libbalsa/rfc2445.c (vcal_strchr): replacement for strchr that
	ignores matches in quoted strings;
	(vcal_strsplit_at_char): replacement for g_strsplit that uses
	vcal_strchr;
	(libbalsa_vcal_new_from_body): use them.

2015-02-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify BalsaMailboxConfView destruction

	* src/mailbox-conf.c (mailbox_conf_view_new_full): use g_free as
	a weak-ref-notify instead of a wrapper.

2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>
